# csv-to-dynamodb

./: README.md  pyproject.toml
csv_to_dynamodb/: cli.py  utils.py
presets/: example.sh
