[tool.poetry]
name = "csv-to-dynamodb"
version = "0.1.0"
description = ""
authors = ["Marçal Pla <marcal@taleia.software>"]
license = "MIT License"
readme = "README.md"
exclude = ["presets"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.98"
click = "^8.1.8"
charset-normalizer = "^3.4.1"

[tool.poetry.scripts]
csv-to-dynamodb = "csv_to_dynamodb.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
